publish: Updating menu to be lighter colour scheme
generated from commit 3cc406e8e59fca1e50da94947baa70508ada1f1a

--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
     </a>
     <div class="toc-wrapper">
       <a href="https://getslideapp.com" target="_blank">
-      <img src="images/logo.png" class="logo" alt="Logo" />
+      <img src="images/logo_blue.png" class="logo" alt="Logo blue" />
     </a>
         <div class="lang-selector">
               <a href="#" data-language-name="shell">shell</a>
@@ -258,12 +258,12 @@
 <blockquote>
 <p>Production API Endpoint:</p>
 </blockquote>
-<pre class="highlight shell tab-shell"><code>https://[COMPANY].getslideapp.com/api/2
+<pre class="highlight shell tab-shell"><code>https://[COMPANY].api.getslideapp.com/2
 </code></pre>
 <blockquote>
 <p>Development API Endpoint:</p>
 </blockquote>
-<pre class="highlight shell tab-shell"><code>https://stage.[COMPANY].getslideapp.com/api/2
+<pre class="highlight shell tab-shell"><code>https://dev.[COMPANY].api.getslideapp.com/2
 </code></pre>
 <blockquote>
 <p>Make sure to replace <code>[COMPANY]</code> with your Company Id.</p>
@@ -280,8 +280,7 @@ You must replace <code>[COMPANY]</code> in all API Requests with your Company Id
 <blockquote>
 <p>To authorize, use this code:</p>
 </blockquote>
-<pre class="highlight shell tab-shell"><code><span class="c"># With shell, you can just pass the correct header with each request</span>
-curl <span class="s2">"https://[COMPANY].getslideapp.com/api/2"</span> <span class="se">\</span>
+<pre class="highlight shell tab-shell"><code>curl <span class="s2">"https://[COMPANY].api.getslideapp.com/2"</span> <span class="se">\</span>
   -H <span class="s2">"Authorization: [TOKEN]"</span>
 </code></pre>
 <blockquote>
