publish: Moving CNAME file
generated from commit 47866a99278c742cac59e777b51d0ffe16ecfab1

--- a/index.html
+++ b/index.html
@@ -248,7 +248,8 @@
           </li>
       </ul>
         <ul class="toc-footer">
-            <li><a href='#'>ADD LINKS HERE</a></li>
+            <li><a href='https://dashboard.getslideapp.com'>Production Slide Dashboard</a></li>
+            <li><a href='https://dev.dashboard.getslideapp.com'>Development Slide Dashboard</a></li>
         </ul>
     </div>
     <div class="page-wrapper">
