publish: Working card update
generated from commit 8c45a2e206df16559e1cb69179bd483a2d793665

--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
         <ul class="toc-footer">
             <li><a href='https://dashboard.getslideapp.com'>Production Slide Dashboard</a></li>
             <li><a href='https://dev.dashboard.getslideapp.com'>Development Slide Dashboard</a></li>
-            <li>v2.3.1-104-ga42f6e4</li>
+            <li>v2.3.1-105-g8c45a2e</li>
         </ul>
     </div>
     <div class="page-wrapper">
@@ -767,18 +767,11 @@ It can be used to set a secondary Bank Account back to &#39;primary&#39;.</p>
 </tr>
 </thead><tbody>
 <tr>
-<td>5471 2090 2407 1017</td>
+<td>5286 2500 0306 1012</td>
 <td>mastercard</td>
-<td>11/19</td>
-<td>710</td>
-<td>-</td>
-</tr>
-<tr>
-<td>5339 1600 0060 8011</td>
-<td>mastercard</td>
-<td>12/20</td>
-<td>802</td>
-<td>-</td>
+<td>09/19</td>
+<td>742</td>
+<td>test123</td>
 </tr>
 </tbody></table>
 <h3 id='list-cards'>List Cards</h3><pre class="highlight shell tab-shell"><code>curl <span class="s2">"{base_url}/user/cards/"</span> <span class="se">\</span>
