--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
         <ul class="toc-footer">
             <li><a href='https://dashboard.getslideapp.com'>Production Slide Dashboard</a></li>
             <li><a href='https://dev.dashboard.getslideapp.com'>Development Slide Dashboard</a></li>
-            <li>v2.3.1-105-g8c45a2e</li>
+            <li>v2.3.1-106-g180ff3c</li>
         </ul>
     </div>
     <div class="page-wrapper">
@@ -767,10 +767,17 @@ It can be used to set a secondary Bank Account back to &#39;primary&#39;.</p>
 </tr>
 </thead><tbody>
 <tr>
-<td>5286 2500 0306 1012</td>
+<td>5239 0900 0011 6015</td>
 <td>mastercard</td>
-<td>09/19</td>
-<td>742</td>
+<td>04/22</td>
+<td>722</td>
+<td>test123</td>
+</tr>
+<tr>
+<td>5286 2500 0002 5044</td>
+<td>mastercard</td>
+<td>08/20</td>
+<td>188</td>
 <td>test123</td>
 </tr>
 </tbody></table>
