publish: Updating changelog
generated from commit 6baf5ef862e25921869dd651ad148cfa429f02b1

--- a/index.html
+++ b/index.html
@@ -432,7 +432,7 @@
         <ul class="toc-footer">
             <li><a href='https://dashboard.getslideapp.com'>Production Slide Dashboard</a></li>
             <li><a href='https://dev.dashboard.getslideapp.com'>Development Slide Dashboard</a></li>
-            <li>v2.3.1-147-ge6006c3</li>
+            <li>v2.3.1-148-g6baf5ef</li>
         </ul>
     </div>
     <div class="page-wrapper">
@@ -3295,12 +3295,12 @@ This error section is stored in a separate file in <code>includes/_errors.md</co
 <li>New automated unit tests for improved code coverage.</li>
 <li>Transaction endpoint for admins and users to retrieve transactions, of any type.</li>
 <li>Pagination support for the new transaction endpoints.</li>
-<li>User registration endpoints</li>
-<li>User login endpoints</li>
-<li><code>type</code> field to the <code>User</code> model</li>
-<li><code>status</code> field to the <code>User</code> model</li>
-<li>User Transfer endpoints for create, list and get transfer</li>
-<li>User Withdrawal endpoints for create, list and get transfer</li>
+<li>User registration endpoints.</li>
+<li>User login endpoints.</li>
+<li><code>type</code> field to the <code>User</code> model.</li>
+<li><code>status</code> field to the <code>User</code> model.</li>
+<li>User Transfer endpoints for create, list and get transfer.</li>
+<li>User Withdrawal endpoints for create, list and get transfer.</li>
 </ul>
 <h4 id='changelog-2-5-0-2019-01-28-update-fee-changed'>Changed</h4>
 <ul>
@@ -3314,6 +3314,7 @@ This error section is stored in a separate file in <code>includes/_errors.md</co
 <h4 id='changelog-2-5-0-2019-01-28-update-fee-fixed'>Fixed</h4>
 <ul>
 <li>Fixed a bug where transactions could not be paged on the dashboard</li>
+<li>Fixed a bug preventing cards from being registered due to the formatting of the expiry month field.<br></li>
 </ul>
 
       </div>
