--- a/index.html
+++ b/index.html
@@ -432,7 +432,7 @@
         <ul class="toc-footer">
             <li><a href='https://dashboard.getslideapp.com'>Production Slide Dashboard</a></li>
             <li><a href='https://dev.dashboard.getslideapp.com'>Development Slide Dashboard</a></li>
-            <li>v2.3.1-148-g6baf5ef</li>
+            <li>v2.3.1-150-g3bdb350</li>
         </ul>
     </div>
     <div class="page-wrapper">
@@ -3299,8 +3299,8 @@ This error section is stored in a separate file in <code>includes/_errors.md</co
 <li>User login endpoints.</li>
 <li><code>type</code> field to the <code>User</code> model.</li>
 <li><code>status</code> field to the <code>User</code> model.</li>
-<li>User Transfer endpoints for create, list and get transfer.</li>
-<li>User Withdrawal endpoints for create, list and get transfer.</li>
+<li>User Transfer endpoints for create, list and get transfers.</li>
+<li>User Withdrawal endpoints for create, list and get withdrawals.</li>
 </ul>
 <h4 id='changelog-2-5-0-2019-01-28-update-fee-changed'>Changed</h4>
 <ul>
